tests/fixtures/pass/syntax-error/input.ts
import {q} from "typestage";

export const expr = q.expr`
  x +
`;
